--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/ci.yml
 name: Playwright QA Tests
 
 on: [push, pull_request]
@@ -8,34 +7,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+      - run: |
           pip install -r requirements.txt
           python -m playwright install --with-deps
-
-      - name: Run tests
-        run: |
-          pytest tests/ -n auto --html=reports/report.html --self-contained-html
-
-      - name: Upload HTML Report
-        uses: actions/upload-artifact@v3
+          pytest tests/ --html=reports/report.html --self-contained-html --junitxml=reports/results.xml
+      - uses: actions/upload-artifact@v3
         with:
           name: html-report
           path: reports/report.html
-
-      # (Opcional) Allure
-      - name: Upload Allure Results
-        if: always()
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
-          name: allure-results
-          path: reports/allure-results
+          name: junit-results
+          path: reports/results.xml
