--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ENV=staging
-BASE_URL=http://localhost:3000/
+ENV=demo
+BASE_URL=https://opensource-demo.orangehrmlive.com
 HEADLESS=true
 TIMEOUT=10000
