--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 ENV=demo
 BASE_URL=https://opensource-demo.orangehrmlive.com
+BASE_URL_API=https://rickandmortyapi.com/api
 HEADLESS=true
 TIMEOUT=10000
