--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ BASE_URL=https://opensource-demo.orangehrmlive.com
 BASE_URL_API=https://rickandmortyapi.com/api
 HEADLESS=true
 TIMEOUT=10000
+
+ENV=Dev_MyApss
+BASE_URL_LOGISTEC=https://myapps.dev.logistec.com/web/dev/apps/myapps/v2.14.25/mainfile.php?
+HEADLESS=true
+TIMEOUT=10000
